# livestream_saver

./: .dockerignore  .gitignore  .gitmodules  CHANGELOG.md  Dockerfile  README.md  __main__.py  channel_monitor.py  docker-compose.build.yml  docker-compose.yml  downloader.py  livestream_saver.cfg  livestream_saver.cfg.example  livestream_saver.cfg.template  livestream_saver.py  manual_download.py  merge.py  pyproject.toml  requirements-opt.txt  requirements.txt  stream_downloader.py  stream_monitor.py  youtube_stream_download.py  youtube_stream_join.sh  yt_dlp_conf.py  ytdlp_config.json
.github/workflows/: docker-publish.yml
archived/: README.md  join_segments.sh  manual_download.py  pre_merge.sh  youtube_stream_pre_merge.sh
config/: .env  livestream_saver.cfg  ytdlp_config.json
docker/: Containerfile  Dockerfile  Readme.md  compose.podman.yaml  compose.yaml  dev.sh  entrypoint.sh
livestream_saver/: channel.py  constants.py  cookies.py  download.py  exceptions.py  extract.py  hooks.py  itag.py  live_video.py  livestream_saver.py  merge.py  monitor.py  notifier.py  pytube.py  request.py  smtp.py  stream.py  util.py  youtube.py
test/: conftest.py  download_test.py  integration_test.py  merge_test.py  monitor_test.py  mpd_test.py  request_test.py  unit_tests.py  util_test.py
test/data/: channel_home_section_fixture.json  channel_videos_richgrid_fixture.json
